# robot-surface-heating

./: .gitignore  README.md
Test_Results/: MPC_Results.ipynb  README.md
libuvc/: README.md
robot_surface_heating_multi_flir/: .gitignore  README.md
robot_surface_heating_multi_flir/robot_surface_heating/: .gitignore
robot_surface_heating_multi_flir/robot_surface_heating/src/: thermal_rviz_pcl_analysis.rviz
robot_surface_heating_multi_flir/robot_surface_heating/src/Universal_Robots_ROS2_Description/urdf/: ur_macro.xacro
robot_surface_heating_multi_flir/robot_surface_heating/src/fake_gripper_publisher/: package.xml  setup.cfg  setup.py
robot_surface_heating_multi_flir/robot_surface_heating/src/fake_gripper_publisher/fake_gripper_publisher/: fake_joint_state_publisher.py
robot_surface_heating_multi_flir/robot_surface_heating/src/fake_gripper_publisher/launch/: fake_gripper_pubs.launch.py
robot_surface_heating_multi_flir/robot_surface_heating/src/lerobot_interface/: package.xml  setup.cfg  setup.py
robot_surface_heating_multi_flir/robot_surface_heating/src/lerobot_interface/config/: lerobot_interface_params.yaml
robot_surface_heating_multi_flir/robot_surface_heating/src/lerobot_interface/launch/: lerobot_interface.launch.py
robot_surface_heating_multi_flir/robot_surface_heating/src/lerobot_interface/lerobot_interface/: robot_control_node.py
robot_surface_heating_multi_flir/robot_surface_heating/src/robot_interface/: CMakeLists.txt  control_loop_log.txt  package.xml
robot_surface_heating_multi_flir/robot_surface_heating/src/robot_interface/config/: robot_interface_parameters.yaml
robot_surface_heating_multi_flir/robot_surface_heating/src/robot_interface/launch/: demo_interface.launch.py  dual_robot_interface.launch.py  moveit_test.launch.py  zigzag_interface.launch.py
robot_surface_heating_multi_flir/robot_surface_heating/src/robot_interface/src/: async_node.py  collision_table.cpp  curobo_planner.py  demo_robot_interface.py  dual_motion.cpp  dual_robot_interface.py  dump.py  execute.py  gripper_test_node.py  heater_path_executor.py  lightweight_executor.py  lightweight_executor_heat_gun.py  lightweight_executor_old.py  modular_executor.py  moveit_test.cpp  moveit_test.py  moveit_waitable.py  overheat_safety_robot_interface.py  rin_boilerplate_code.py  test_robot_interface.py  test_robot_interface_new.py  toy_executor_stub.py
robot_surface_heating_multi_flir/robot_surface_heating/src/robot_interface/srv/: PoseToPlan.srv
robot_surface_heating_multi_flir/robot_surface_heating/src/thermal_camera/: package.xml  saddle_mold.STL  setup.py
robot_surface_heating_multi_flir/robot_surface_heating/src/thermal_camera/calibration_data_samples/: README.md
robot_surface_heating_multi_flir/robot_surface_heating/src/thermal_camera/config/: cad_register_config.yaml  camera_params.yaml  pcl_params.yaml  pnp_calibration_config.yaml
robot_surface_heating_multi_flir/robot_surface_heating/src/thermal_camera/launch/: ba_cams.launch.py  cad_launch.launch.py  cams_and_cad.launch.py  lepton_visual.launch.py  pcl_analysis.launch.py  pnp_extrinsic.launch.py  policy_launch.launch.py  realsense_frame_broadcaster.launch.py  segmented_view.launch.py  test_pointcloud.launch.py  thermal_pub.launch.py
robot_surface_heating_multi_flir/robot_surface_heating/src/thermal_camera/thermal_camera/: Bowl.stl  RSS_v3.stl  adhesive_single.py  arduino_dummy.py  bundle_adjustment.py  cad_registration.py  cad_visualization.py  camera_frame_broadcaster.py  camera_grid.rbl  coldest_pose_pub.py  common_motionplan_utilities.py  continuous_replanner.py  continuous_replanner_old.py  continuous_replanner_old2.py  continuous_replanner_old3.py  continuous_replanner_old5.py  continuous_replanner_old6.py  current_results.txt  debug_surface_normals.py  extrema_pub.py  extrema_pub_curobo.py  extrema_pub_modular.py  extrinsic.py  greedy_replanner.py  heat_gun_controller.py  heater_manual.py  heater_path_to_cartesian.py  heating_path_data_collection.py  hottest_temp_pub.py  learned_model_util.py  live_temp_plotter.py  mask_playback.py  mpc_test_1.py  o3d_visual_surface.py  o3d_visual_surface_old1.py  o3d_visual_surface_old2.py  optimize_single_real.py  optimize_single_real_old6.py  picked_raw_reference_points.txt  pnp_extrinsic.py  (+30 more)
robot_surface_heating_multi_flir/robot_surface_heating/src/thermal_camera_interfaces/: CMakeLists.txt  package.xml
robot_surface_heating_multi_flir/robot_surface_heating/src/thermal_camera_interfaces/msg/: Extrema.msg  ProjectedHeaterPath.msg  RobotMask.msg
robot_surface_heating_multi_flir/robot_surface_heating/src/thermal_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robot_surface_heating_multi_flir/robot_surface_heating/src/thermal_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  my_robot_cell.ros2_control.xacro  my_robot_cell.srdf  my_robot_cell.srdf.xacro  my_robot_cell_macro.srdf.xacro  my_robot_cell_new.srdf  my_robot_cell_ur10e.srdf  ompl_planning.yaml  pilz_industrial_motion_planner_planning.yaml  ros2_controllers.yaml  thermal_moveit.rviz
robot_surface_heating_multi_flir/robot_surface_heating/src/thermal_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  thermal_moveit.launch.py  warehouse_db.launch.py
robot_surface_heating_multi_flir/robot_surface_heating/src/ur_robot_driver/: CMakeLists.txt
robot_surface_heating_multi_flir/robot_surface_heating/src/ur_robot_driver/config/: ur_controllers.yaml  ur_controllers_ur10e.yaml
robot_surface_heating_multi_flir/robot_surface_heating_old_ros1/: .gitignore  filename.avi
robot_surface_heating_multi_flir/robot_surface_heating_old_ros1/src/: param.yaml
robot_surface_heating_multi_flir/robot_surface_heating_old_ros1/src/heat_planning/: CMakeLists.txt  package.xml
robot_surface_heating_multi_flir/robot_surface_heating_old_ros1/src/thermal_camera/: CMakeLists.txt  package.xml
(+101 files in other folders)
